# satellite_img_ML_model

./: .gitignore  check_for_overlap.py  duplicate_check.py  granular.py  merge.py  test.csv  unique.py
MOSAIKS_feature/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
MOSAIKS_feature/MOSAIKS_feature/: granular_coords.py  misc.py
MOSAIKS_feature/MOSAIKS_feature.egg-info/: PKG-INFO  SOURCES.txt
MOSAIKS_feature/src/MOSAIKS_feature/: granular_coords.py  misc.py  strategy_two.py
MOSAIKS_feature/src/MOSAIKS_feature.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MOSAIKS_feature/src/MOSAIKS_feature/analysis/: Satellite_Image_Generation and Mosaiks_Heat_Map-Documentation_Final.md  img_generation_heatmap.py
MOSAIKS_feature/src/MOSAIKS_feature/extract_features/: aggregate_features.py  granular.py  granular_coords_inside_polygon.py  requirements.txt  strategy_two.py
MOSAIKS_feature/src/MOSAIKS_feature/testing/: aggregate_features_functional.py  granular_coords_functional.py  strategy_two_functional.py
MOSAIKS_feature/tests/: test_aggregate_features.py  test_granular_coords.py  test_misc.py  test_strategy_two.py
raw/: merge.py  subset.py
raw/strategy3/: aggregate_features.py  v3.py
strategy1/: granular.py
strategy2/: compare_features_in_str1_and_2.py
strategy3/: aggregate_features.py  test_v3.py  v3.py
